# python-mob-programming

./: .gitignore  Dockerfile  README.md  __init__.py  database.db  db.py  docker-compose.override.test.yaml  docker-compose.yaml  example.env  main.py  pyproject.toml  randomstrings.py  requirements.txt  tox.ini  urls.db  wsgi.py
FlasksPractice/: README.md
FlasksPractice/catalog/: catalog.py  item.py
FlasksPractice/catalog/db/: catalog.sqlite3
FlasksPractice/catalog/templates/: data_inserted.html  db_created.html  index.html  insert_item.html  show_item.html  show_item_basic.html  show_list.html
FlasksPractice/flaskr/: __init__.py  database.db  db.py  main.py
FlasksPractice/flaskr/static/: style.css
FlasksPractice/flaskr/templates/: form.html  index.html
FlasksPractice/hello/: hello.py
FlasksPractice/mypage/: pages.py
FlasksPractice/mypage/static/: style.css  upload_file.html
FlasksPractice/mypage/templates/: chap2.html  fluoric.html  fruoric.html  glass.html  materials.html  plastic.html  show_survey.html  stainless.html  survey.html  upload_file.html
app/: __init__.py  config.py  hello_world.py  repositories.py
flask/: local.sqlite  server.py
flask/app/: __init__.py  app_factory.py  config.py  health.py  hello_world.py  models.py  repositories.py  shortenURL_api.py
flask/app/create_short_url/: views.py
flask/app/create_short_url/static/css/: style.css
flask/app/create_short_url/static/js/: index.js
flask/app/create_short_url/templates/create_short_url/: create.html
flask/app/crud/: views.py
flask/app/crud/templates/crud/: create.html
flask/app/db_check/: result.py
flask/app/db_check/templates/db_check/: index.html
flask/app/templates/: form.html
flask/data/: test.db
flask/tests/test_health/: conftest.py  test_health.py
flaskr/: __init__.py  app_factory.py  db.py  hello_world.py  main.py  models.py  repositories.py
flaskr/data/: test.db
flaskr/static/: style.css
flaskr/templates/: form.html  index.html
interface/: swagger.yaml
nginx/: develop.conf
static/: style.css
templates/: form.html
web/: __init__.py  app_factory.py  hello_world.py  repositories.py
