[project]
name = "python-mob-programming"
version = "0.1.0"

[tool.poetry]
name = "python-mob-programming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "flask" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=2.0"
werkzeug = ">=2.0"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
